# acervo_digital

./: .env  pyproject.toml
acervo_digital/: app.py
acervo_digital/core/: database.py  security.py  settings.py  token.py
acervo_digital/routers/: book.py  user.py
acervo_digital/schemas/: token_schema.py
alembic/: env.py
alembic/versions/: a04683857232_primeira_revisão.py
src/acervo_digital/: app.py
src/acervo_digital/core/: database.py
src/acervo_digital/routers/: book.py  user.py
