[project]
name = "acervo-digital"
version = "0.1.0"
description = ""
authors = [
    {name = "TheNullP",email = "mfreitasc0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "acervo_digital", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
