[project]
name = "acervo-digital"
version = "0.1.0"
description = ""
authors = [
    {name = "TheNullP",email = "mfreitasc0@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "acervo_digital", from = "src"}]

[tool.taskipy.tasks]
run = "uvicorn acervo_digital.app:app --host 0.0.0.0 --port 8088 --reload  --reload-exclude __pycache__ --reload-exclude .mypy_cache --reload-exclude .venv"
# run = "fastapi dev acervo_digital/app.py --port 8088"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
